# parsync

./: PACKAGING.md  pyproject.toml
parsync/: __init__.py
