[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parsync"
dynamic = ["version"]
requires-python = ">= 3.7"
authors = [
  {name = "Nicolas Granger", email = "nicolas.granger@cea.fr"}
]
description = "Recursively copy missing files to a directory"
readme = "README.md"
license = { text = "CECILL-C" }

[project.optional-dependencies]
tests = ["pytest"]

[project.scripts]
parsync = "parsync:main"

[tool.setuptools.packages.find]
include = ["parsync*"]  # ["*"] by default
